<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Log Out</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="apple_size">Apple Size</string>
    <string name="select_image">Take/Select Photo</string>
    <string name="save">Save</string>
    <string name="forgot">Forgot your password?</string>
    <string name="projects">Projects</string>
    <string name="new_project">New Project</string>
    <string name="project_name">Project Name</string>
    <string name="data">Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pwd">Change Password</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="variety">Variety</string>
    <string name="id">ID</string>
    <string name="size">Size</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="calibrate_camera">Calibrate Camera</string>
    <string name="calibrate_button_text">Calibrate</string>
    <string name="calibrate_text">Do you want to calibrate the camera?      If you wish, you will have to take 5 photos and manually enter the size of the fruit.</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_project">Delete Project</string>
    <string name="delete">Delete</string>
    <string name="delete_image_text">Are you sure you want to delete the image? Once deleted, it cannot be recovered.</string>
    <string name="delete_project_text">Are you sure you want to delete the project? Once deleted, it cannot be recovered.</string>
    <string name="edit_project">Edit Project</string>
    <string name="no">No</string>
    <string name="histogram">Project Histogram</string>
    <string name="close">Close</string>

</resources>